--- a/Presentation/Nop.Web/Areas/Admin/Views/Category/_CreateOrUpdate.Mappings.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Category/_CreateOrUpdate.Mappings.cshtml
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="form-group advanced-setting row">
+    <div @(Model.LimitedToStores == true ? "style=display:none;" : "") class="form-group advanced-setting row">
         <div class="col-md-3">
             <nop-label asp-for="SelectedStoreIds" />
         </div>
