--- a/Presentation/Nop.Web/Areas/Admin/Views/CheckoutAttribute/_CreateOrUpdate.Info.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/CheckoutAttribute/_CreateOrUpdate.Info.cshtml
@@ -169,7 +169,7 @@
             <span asp-validation-for="ValidationFileMaximumSize"></span>
         </div>
     </div>
-    <div class="form-group row advanced-setting">
+    <div @(Model.LimitedToStores == true ? "style=display:none;" : "") class="form-group row advanced-setting">
         <div class="col-md-3">
             <nop-label asp-for="SelectedStoreIds" />
         </div>
