--- a/Presentation/Nop.Web/Areas/Admin/Views/Country/_CreateOrUpdate.Info.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Country/_CreateOrUpdate.Info.cshtml
@@ -83,7 +83,7 @@
             <span asp-validation-for="SubjectToVat"></span>
         </div>
     </div>
-    <div class="form-group row">
+    <div @(Model.LimitedToStores == true ? "style=display:none;" : "") class="form-group row">
         <div class="col-md-3">
             <nop-label asp-for="SelectedStoreIds"/>
         </div>
