--- a/Presentation/Nop.Web/Areas/Admin/Views/Currency/_CreateOrUpdate.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Currency/_CreateOrUpdate.cshtml
@@ -89,7 +89,7 @@
                                 <span asp-validation-for="CustomFormatting"></span>
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div @(Model.LimitedToStores == true ? "style=display:none;" : "") class="form-group row">
                             <div class="col-md-3">
                                 <nop-label asp-for="SelectedStoreIds"/>
                             </div>
