--- a/Presentation/Nop.Web/Areas/Admin/Views/Manufacturer/_CreateOrUpdate.Mappings.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Manufacturer/_CreateOrUpdate.Mappings.cshtml
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div class="form-group row advanced-setting">
+    <div @(Model.LimitedToStores == true ? "style=display:none;" : "") class="form-group row advanced-setting">
         <div class="col-md-3">
             <nop-label asp-for="SelectedStoreIds" />
         </div>
