Restrict Shipping Methods per Store

--- a/Plugins/Nop.Plugin.Shipping.FixedByWeightByTotal/Views/Configure.cshtml
+++ b/Plugins/Nop.Plugin.Shipping.FixedByWeightByTotal/Views/Configure.cshtml
@@ -32,6 +32,10 @@
                 <i class="fas fa-globe"></i>
                 @T("Admin.Configuration.Shipping.Restrictions")
             </a>
+            <a asp-controller="Store" asp-action="Restrictions" class="btn btn-primary">
+                <i class="fas fa-store"></i>
+                @T("Admin.Configuration.Store.Restrictions")
+            </a>
         </div>
     </div>
 </div>
