--- a/Presentation/Nop.Web/Themes/Emporium/Views/Checkout/ShippingAddress.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Checkout/ShippingAddress.cshtml
@@ -1,6 +1,12 @@
 ﻿@model CheckoutShippingAddressModel
+@inject Nop.Core.IWorkContext _workContext
+
 @{
     Layout = "_ColumnsOne";
+
+    var currentCustomer = await _workContext.GetCurrentCustomerAsync();
+    var ShippingAddress = currentCustomer.ShippingAddressId;
+    var BillingAddress = currentCustomer.BillingAddressId;
 
     //title
     NopHtml.AddTitleParts(T("PageTitle.Checkout").Text);
@@ -46,6 +52,12 @@
                         <div class="address-grid">
                             @foreach (var item in Model.ExistingAddresses)
                             {
+                                var selectedAs = "";
+                                @if (item.Id == BillingAddress && item.Id != ShippingAddress) selectedAs = "Billing Address";
+                                else if (item.Id == ShippingAddress && item.Id != BillingAddress) selectedAs = "Shipping Address";
+                                else if (item.Id == BillingAddress && item.Id == ShippingAddress) selectedAs = "Shipping and Billing Address";
+                                else selectedAs = "-";
+
                                 <div class="address-item">
                                     <ul class="address-box">
                                         <li class="name">
@@ -54,6 +66,10 @@
                                         <li class="email">
                                             <label>@T("Address.Fields.Email"):</label>
                                             <span>@item.Email</span>
+                                        </li>
+                                        <li class="phone">
+                                            <label><strong>Selected As:</strong></label>
+                                            <span>@selectedAs</span>
                                         </li>
                                         @if (item.PhoneEnabled)
                                         {
