--- a/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.Info.cshtml
@@ -382,15 +382,17 @@
             </div>
         </div>
     }
-    <div class="form-group row">
-        <div class="col-md-3">
-            <nop-label asp-for="Active" />
+    @if(Model.Active){
+        <div class="form-group row">
+            <div class="col-md-3">
+                <nop-label asp-for="Active" />
+            </div>
+            <div class="col-md-9">
+                <nop-editor asp-for="Active" />
+                <span asp-validation-for="Active"></span>
+            </div>
         </div>
-        <div class="col-md-9">
-            <nop-editor asp-for="Active" />
-            <span asp-validation-for="Active"></span>
-        </div>
-    </div>
+    }
     @if (!string.IsNullOrEmpty(Model.MultiFactorAuthenticationProvider))
     {
         <div class="form-group row">
