Category Import Script

--- a/Presentation/Nop.Web/Areas/Admin/Views/Category/List.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Category/List.cshtml
@@ -140,6 +140,11 @@
                                 {
                                     Title = T("Admin.Catalog.Categories.Fields.Name").Text
                                 },
+                                new ColumnProperty(nameof(CategoryModel.CodeId))
+                                {
+                                    Title = T("Admin.Catalog.Categories.Fields.CodeId").Text,
+                                    Width = "150",
+                                },
                                 new ColumnProperty(nameof(CategoryModel.Published))
                                 {
                                     Title = T("Admin.Catalog.Categories.Fields.Published").Text,
