--- a/Presentation/Nop.Web/Areas/Admin/Views/Affiliate/List.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Affiliate/List.cshtml
@@ -110,7 +110,7 @@
                 <div class="card-body">
                     <p>
                         @T("Admin.Affiliates.Description")
-                        <nop-doc-reference asp-string-resource="@T("Admin.Documentation.Reference.Affiliates", Docs.Affiliates + Utm.OnAdmin)" asp-add-wrapper="false"/>
+                        @* <nop-doc-reference asp-string-resource="@T("Admin.Documentation.Reference.Affiliates", Docs.Affiliates + Utm.OnAdmin)" asp-add-wrapper="false"/> *@
                     </p>
 
                     @await Html.PartialAsync("Table", new DataTablesModel
