--- a/Presentation/Nop.Web/Areas/Admin/Views/Shipping/Providers.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Shipping/Providers.cshtml
@@ -36,7 +36,7 @@
                 <div class="card card-default">
                     <div class="card-body">
                         <p>
-                            <nop-doc-reference asp-string-resource="@T("Admin.Documentation.Reference.ShippingProviders", Docs.ShippingProviders + Utm.OnAdmin)" asp-add-wrapper="false"/>
+                            @* <nop-doc-reference asp-string-resource="@T("Admin.Documentation.Reference.ShippingProviders", Docs.ShippingProviders + Utm.OnAdmin)" asp-add-wrapper="false"/> *@
                             @T("Admin.Configuration.Shipping.Providers.DownloadMorePlugins", OfficialSite.ShippingPlugins + Utm.OnAdminShippingPlugins.Replace('?', '&'))
                         </p>
 
