--- a/Presentation/Nop.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
                         </div>
                     }
 
-                    @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardTop, additionalData = Model })
+                    @* @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardTop, additionalData = Model })
                     @if (!Model.IsLoggedInAsVendor)
                     {
                         <div class="row">
@@ -47,7 +47,7 @@
                                 @await Component.InvokeAsync("NopCommerceNews")
                             </div>
                         </div>
-                    }
+                    } *@
 
                     @await Component.InvokeAsync("AdminWidget", new { widgetZone = AdminWidgetZones.DashboardNewsAfter, additionalData = Model })
                     @if (!Model.IsLoggedInAsVendor && canManageOrders && canManageCustomers && canManageProducts && canManageReturnRequests)
