--- a/Presentation/Nop.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Presentation/Nop.Web/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -205,9 +205,9 @@
                         <div class="col-md-4 col-xs-12 text-center">
                             @((await dateTimeHelper.ConvertToUserTimeAsync(DateTime.Now)).ToString("f", CultureInfo.CurrentCulture))
                         </div>
-                        <div class="col-md-4 col-xs-12 text-md-right text-center">
+                        @* <div class="col-md-4 col-xs-12 text-md-right text-center">
                             <b>nopCommerce version @NopVersion.FULL_VERSION</b>
-                        </div>
+                        </div> *@
                     </div>
                 </div>
             </div>
