--- a/Presentation/Nop.Web/Themes/Emporium/Views/Shared/Components/Footer/Default.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Shared/Components/Footer/Default.cshtml
@@ -139,9 +139,10 @@
         @if (!removeCopyright)
         {
             <div class="footer-powered-by">
-                Powered by <a href="@(OfficialSite.Main)" target="_blank" @(Model.IsHomePage ? string.Empty : "rel=nofollow")>nopCommerce</a>
+                @* Powered by <a href="@(OfficialSite.Main)" target="_blank" @(Model.IsHomePage ? string.Empty : "rel=nofollow")>nopCommerce</a> *@
                 @*Would you like to remove the "Powered by nopCommerce" link in the bottom of the footer?
                     Find more info here https://www.nopcommerce.com/nopcommerce-copyright-removal-key*@
+                Powered by <a href="https://www.premacanada.ca" target="_blank">Prema Canada</a>
             </div>
         }
         @if (!removeDesignedBy)
