--- a/Presentation/Nop.Web/Plugins/Widgets.NivoSlider/Views/PublicInfo.cshtml
+++ b/Presentation/Nop.Web/Plugins/Widgets.NivoSlider/Views/PublicInfo.cshtml
@@ -8,7 +8,7 @@
 <script asp-exclude-from-bundle="true" src="~/Plugins/Widgets.NivoSlider/Scripts/jquery.nivo.slider.js" asp-location="Footer"></script>
 
 <div class="slider-wrapper theme-custom">
-    <div id="nivo-slider" class="nivoSlider">
+    <div id="nivo-slider" class="nivoSlider" style="height: 280px">
         @{
             var dataSlide1 = new ViewDataDictionary(ViewData)
             {
