--- a/Presentation/Nop.Web/Themes/Emporium/Views/Customer/LoginAdmin.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Customer/LoginAdmin.cshtml
@@ -27,7 +27,7 @@
                 @T("Account.Login.Unsuccessful")
             </div>
             <div class="fieldset">
-                <div class="form-fields">
+                <div class="form-fields" style="background-color: #d3d3d3;">
                     @if (Model.UsernamesEnabled)
                     {
                         <div class="inputs">
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <button type="submit" class="button-1 login-button">@T("Account.Login.LoginButton")</button>
+                <button type="submit" class="button-1 login-button" style="background-color: #444; width:30%;">@T("Account.Login.LoginButton")</button>
             </div>
         </form>
         <div class="external-authentication">
