hotfix: Change powerd by …. To premacanada

--- a/Presentation/Nop.Web/Themes/Emporium/Views/Shared/Components/Footer/Default.cshtml
+++ b/Presentation/Nop.Web/Themes/Emporium/Views/Shared/Components/Footer/Default.cshtml
@@ -147,9 +147,9 @@
         }
         @if (!removeDesignedBy)
         {
-            <div class="footer-designed-by">
+            @* <div class="footer-designed-by">
                 Designed by <a href="https://www.nop-templates.com/" target="_blank">Nop-Templates.com</a>
-            </div>
+            </div> *@
         }
         <div class="footer-disclaimer">
             @T("Content.CopyrightNotice", DateTime.Now.Year, Model.StoreName)
